--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express",
+  "name": "network_montoring_tool",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -11,5 +11,8 @@
     "url": ""
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
