--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "datatables.net": "^1.13.4",
+    "dt": "^0.0.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "net": "^1.0.2"
   }
