--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "net": "^1.0.2"
+    "net": "^1.0.2",
+    "winston": "^3.8.2"
   }
 }
